Fix checkbox labels alignment

--- a/styles/app.css
+++ b/styles/app.css
@@ -112,8 +112,9 @@ form label {
 }
 
 form input[type="text"],
-form input[type="number"] {
-	display: inline-block;
+form input[type="number"]
+{
+	display: flex;
 	-webkit-box-flex: 1;
 	-ms-flex: 1;
 	flex: 1;
@@ -126,8 +127,18 @@ form input[type="number"] {
 	min-width: 0;
 }
 
+.checkbox-control {
+	display: flex;
+	-webkit-box-flex: 1;
+	-ms-flex: 1;
+	flex: 1;
+	margin-right: 3em;
+	min-width: 0;
+	line-height: 1.2em;
+}
+
 form input[type="checkbox"] {
-	display: inline-block;
+	/*display: inline-block;*/
 	height: 2em;
 	width: 1.2em;
 	margin: 0;
@@ -140,7 +151,10 @@ form .form-group.smaller-top-margin {
 }
 
 form input[type="checkbox"] + label {
-	padding-top: 0.45em;
+	/*padding-top: 0.45em;*/
+	display: inline-block;
+	line-height: 1.2px;
+	vertical-align: middle;
 }
 
 form select {
